--- a/www/config.json
+++ b/www/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "com.moodle.moodlemobile",
+    "app_id" : "com.stream.moodlemobile",
     "appname": "Moodle Mobile",
     "versioncode" : "2017",
     "versionname" : "3.2.1",
